# TestsForWork

./: .gitignore  README.md  calculate_normals.cpp  de_serialize.cpp  de_serialize_2.cpp  de_serialize_3.cpp  fix_and_optimize.cpp  int_to_binary_2.cpp  int_to_binary_int.cpp  parse_csv.cpp  remove_dups.cpp  remove_dups_2.cpp
Socket_and_threads/: Makefile  Programm1.cpp  Programm2.cpp  README.md
disk_stats/: README.md  build.pro
disk_stats/src/: arch.hpp  core.cpp  core.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
stereogram_solver/: CMakeLists.txt  README.md  file_list.cpp  file_list.hpp  log.cpp  log.hpp  main.cpp  render.cpp  render.hpp  stereogram_solver.cpp  stereogram_solver.hpp
